--- a/package.json
+++ b/package.json
@@ -1,18 +1,24 @@
 {
   "name": "ojfe",
-  "private": true,
   "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "dev": "vite",
     "build": "vite build",
+    "dev": "vite",
     "preview": "vite preview"
   },
   "dependencies": {
+    "ant-design-vue": "^2.2.8",
     "element-plus": "^2.1.4",
     "vue": "^3.2.25"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.0",
-    "vite": "^2.8.0"
+    "babel-plugin-import": "^1.13.3",
+    "style-resources-loader": "^1.4.1",
+    "unplugin-auto-import": "^0.6.6",
+    "unplugin-vue-components": "^0.18.1",
+    "vite": "^2.8.0",
+    "vue-cli-plugin-style-resources-loader": "~0.1.5"
   }
 }
