--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "dependencies": {
     "ant-design-vue": "^2.2.8",
     "element-plus": "^2.1.4",
+    "highlight.js": "^11.5.0",
+    "highlightjs": "^9.16.2",
+    "markdown-it": "^12.3.2",
     "vue": "^3.2.25"
   },
   "devDependencies": {
