--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "ant-design-vue": "^2.2.8",
     "element-plus": "^2.1.4",
     "highlight.js": "^11.5.0",
-    "highlightjs": "^9.16.2",
     "markdown-it": "^12.3.2",
     "vue": "^3.2.25"
   },
